--- a/config.ini
+++ b/config.ini
@@ -8,19 +8,23 @@ study_start_date=2015-01-01
 # Number of patients
 cohort_size=1000
 # The number of patients that are treated with drug A
-drug_a_treatment_fraction_range=0.6, 0.9  # TODO  probability of drug A and B should be inversely proportional
+# TODO  probability of drug A and B should be inversely proportional
+drug_a_treatment_fraction_range=0.6, 0.9 
 # The number of patients that are treated with drug B
 drug_b_treatment_fraction_range=0.3, 0.6
 # Range of the latency in days for start of drug A treatment date after diagnosis date
-drug_a_start_date_range=7, 180  # TODO: drug a and drug b should have same start range - a better drug gets phased in and b gets phased out
+# TODO: drug a and drug b should have same start range - a better drug gets phased in and b gets phased out
+drug_a_start_date_range=7, 180  
 # Range of the latency in days for start of drug B treatment date after diagnosis date
 drug_b_start_date_range=180, 365
 # Survival probabilities per year post diagnosis (year: probability)
-survival_probabilities_per_year=1:0.85, 3:0.49, 5:0.35, 10:0.13  # TODO we need to split survival probabilities per drug - a better drug (30-50 % better)
+# TODO we need to split survival probabilities per drug - a better drug (30-50 % better)
+survival_probabilities_per_year=1:0.85, 3:0.49, 5:0.35, 10:0.13  
 # Number of months to simulate frequency of db update from EHR
 db_update_frequency_in_months=2
 # Range of the latency in days for the death date to be recorded in EHR
-death_date_recording_latency_range=14, 14  # explicitly set to constant value for now
+# explicitly set to constant value for now
+death_date_recording_latency_range=14, 14  
 # Abstraction rate: number of abstracted patients per month
 patients_abstracted_per_month=250
 # Range of the latency in days for the diagnosis date to be abstracted once available in DB
@@ -30,4 +34,5 @@ drug_a_date_abstraction_latency_range=15,30
 # Range of the latency in days for the drug b date to be abstracted once available in DB
 drug_b_date_abstraction_latency_range=15,30
 # Range of the latency in days for the death date to be abstracted once available in DB
-death_date_abstraction_latency_range=14,14  # explicitly set to constant value for now
+# explicitly set to constant value for now
+death_date_abstraction_latency_range=14,14  
