--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,15 @@ version = "0.1.0"
 description = "Default template for PDM package"
 authors = []
 dependencies = [
-  "Pyarrow",
-  "pandas",
-  "numpy",
-  "scipy>=1.12.0",
-  "pytest",
-  "mypy",
-  "rwdsim @ file:///${PROJECT_ROOT}/",
+    "Pyarrow",
+    "pandas",
+    "numpy",
+    "scipy>=1.12.0",
+    "pytest",
+    "mypy",
+    "rwdsim @ file:///${PROJECT_ROOT}/",
+    "pydantic>=2.6.4",
+    "pydantic-settings>=2.2.1",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
