--- a/config.json
+++ b/config.json
@@ -55,6 +55,24 @@
         1,
         10
       ]
+    },
+    {
+      "name": "C",
+      "survival_probabilities": {
+        "1": 0.85,
+        "3": 0.49,
+        "5": 0.35,
+        "10": 0.13
+      },
+      "start_date_range": [
+        7,
+        180
+      ],
+      "probability_weights": [
+        1,
+        10,
+        1
+      ]
     }
   ]
 }
