--- a/config.json
+++ b/config.json
@@ -23,7 +23,7 @@
   ],
   "drugs": [
     {
-      "name": "A",
+      "name": "Drug A",
       "survival_probabilities": {
         "1": 0.85,
         "3": 0.49,
@@ -40,7 +40,7 @@
       ]
     },
     {
-      "name": "B",
+      "name": "Drug B",
       "survival_probabilities": {
         "1": 0.85,
         "3": 0.49,
@@ -57,7 +57,7 @@
       ]
     },
     {
-      "name": "C",
+      "name": "Drug C",
       "survival_probabilities": {
         "1": 0.85,
         "3": 0.49,
